--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "next-auth": "^4.24.7",
     "socket.io": "^4.7.4"
   }
 }
